# check-model-config

./: .gitignore  pyproject.toml
.github/workflows/: python-publish.yml
check_model_config/: cli.py  tests.py
