# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "check-model-config"
version = "0.1.0"
authors = [
    { name = "Cavit Erginsoy", email = "cavit@erginsoy.com" },
]
description = "A tool to validate transformer model configurations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0",
    "torch>=2.0",
    "transformers>=4.0",
]
license = "MIT"
keywords = ["llm", "transformers", "validation", "pytest"]

[project.scripts]
check-model-config = "check_model_config.cli:main"

[tool.pytest.ini_options]
addopts = "check_model_config/tests.py -v --tb=short"